stopped overlapping of button styles

--- a/main.css
+++ b/main.css
@@ -88,32 +88,24 @@
   text-decoration: none;
   cursor: pointer;
 }
-.offset {
-  box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
-}
 .offset:hover{
   box-shadow: 0 0 0 0 var(--hover), inset 6em 3.5em 0 0 var(--hover);
-}
-.offset {
-  --color: #2f2f2f;
-  --hover: #1f1f1f;
-}
-button {
-  color: var(--color);
-  transition: 0.25s;
-}
-button:hover{
   border-color: var(--hover);
   color: #fff;
   cursor: pointer;
 }
-button {
+.offset {
+  --color: #2f2f2f;
+  --hover: #1f1f1f;
+  color: var(--color);
+  transition: 0.25s;
   background: none;
   border: 2px solid;
   font: inherit;
   line-height: 1;
   margin: 0.5em;
   padding: 1em 2em;
+  box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
 }
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 *, *::after, *::before {
